# optionsfi

./: .gitignore  AGENTS.md  Anchor.toml  DAY_1-3_COMPLETION_REPORT.md  HOW_IT_WORKS.md  ORG_SETUP_GUIDE.md  README.md  SCRIPTS.md  SMART_CONTRACT_AUDIT_REPORT.md  package-lock.json  upgrade-verification-results.json
app/: package-lock.json  package.json  tsconfig.tsbuildinfo
app/anchor/: vault.json  vault_idl.json
app/app/: globals.css  page.tsx
app/components/: AppWalletProvider.tsx  DemoPanel.tsx
app/data/: nvda-volatility-cache.json
app/hooks/: usePythPrices.ts  useVault.ts  useWalletActivity.ts
app/lib/: rfq-client.ts  vault-config.ts  vault-sdk.ts  vault-timing.ts
config/: vaults.json
docs/: architecture.mdx  introduction.mdx  mint.json  quickstart.mdx  vault-deployment.md
docs/api-reference/: option-pricing.mdx  overview.mdx  rfq-client.mdx  utilities.mdx  vault-instructions.mdx
docs/examples/: covered-call-vault.mdx  pricing-options.mdx
docs/guides/: creating-rfqs.mdx  executing-options.mdx  handling-quotes.mdx  vault-integration.mdx
docs/oracle/: api-reference.mdx  integration.mdx  overview.mdx
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
scripts/: check-vault.ts  cleanup-tokens.ts  close-orphaned-account.ts  create-nvdax.ts  create-usdc.ts  create-vault.ts  create-vnvdax-metadata.ts  force-close-vault.ts  fund-keeper.ts  init-demo-v4-raw.ts  init-demo-v4.ts  init-nvdax2.ts  init-vault.ts  inspect-vault.ts  migrate-vault.ts  package-lock.json  package.json  set-vnvdax-metadata.ts  setup.sh  test-pricing.js  tsconfig.json
(+183 files in other folders)
