[package]
name = "vault"
version = "0.1.0"
description = "OptionsFi V2 - Covered Call Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
mpl-token-metadata = "5.1.0"
